# fast-api-todo-app-with-auth

./: .gitignore  README.md  pyproject.toml
tests/: test_user.py  todo_test.py
todo/: main.py  settings.py
todo/Model/: model.py
todo/Service/: delete_table.py  todo_service.py  user_service.py
todo/Utils/: utils.py
